added bhajans to website

--- a/client/index.html
+++ b/client/index.html
@@ -1656,7 +1656,7 @@
               <i class="fas fa-book-open"></i>
             </div>
             <div>
-              <h4 class="font-bold">Temple History PDF</h4>
+              <h4 class="font-bold">Bhakta Namawali & Prahlad Chhand</h4>
               <p class="text-xs opacity-70">Document • 2 MB</p>
             </div>
             <button class="ml-auto text-secondary hover:scale-110 transition"><i
@@ -2184,7 +2184,7 @@
           </div>
         </div>
         <div class="border-t border-gray-800 pt-8 text-center text-sm text-gray-500">
-          <p>&copy; 2026 Sri Narsimha Temple Trust.</p>
+          <p>&copy; 2026 Sri Narsingh Bada Mandir</p>
         </div>
       </div>
     </footer>
@@ -2258,9 +2258,9 @@
 
     // --- GLOBAL AUDIO STATE ---
     const playlist = [
-      { title: "Narasimha Maha Mantra", url: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" },
-      { title: "Divine Flute", url: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3" },
-      { title: "Temple Ambience", url: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" }
+      { title: "Namaste Narsimhaya", url: "https://www.srinarsinghdevji.com/public/assets/static/Namaste_Narasimhaya.webm" },
+      { title: "Madhurastakam", url: "https://www.srinarsinghdevji.com/public/assets/static/MADHURASHTAKAM.webm" },
+      { title: "Radha Ramanam Hare Hare", url: "https://www.srinarsinghdevji.com/public/assets/static/Radha_Ramanam_Hare_Hare.webm" }
     ];
     let currentTrack = 0;
     let isPlaying = false;
