--- a/client/index.html
+++ b/client/index.html
@@ -3388,14 +3388,12 @@
         reader.readAsDataURL(file);
       }
     }
-    // --- DYNAMIC HISTORY DATA (CONNECTED TO DB) ---
+
     // --- DYNAMIC HISTORY DATA (CONNECTED TO DB) ---
     let historyData = [];
     let activeHistoryId = null;
     let currentImageIndex = 0;
-
-    // 🔥 FIXED: This variable was missing, causing ReferenceError
-    let currentStoryImages = [];
+    let currentStoryImages = []; // Stores images while editing
 
     const API_URL = 'https://sri-xpvu.onrender.com/api';
 
@@ -3428,134 +3426,200 @@
       }
     }
 
-    // --- OPEN MODAL (POPULATE LIST) ---
+    // --- RENDER HISTORY (Fixed Layout) ---
+    function renderHistory() {
+      const tabContainer = document.getElementById('history-tabs-container');
+      const contentContainer = document.getElementById('history-content-container');
+
+      if (!tabContainer || !contentContainer) return;
+
+      // 1. RENDER TABS
+      tabContainer.innerHTML = historyData.map(item => {
+        const isActive = item.id === activeHistoryId;
+        const activeStyle = "bg-secondary text-black border-secondary scale-105 shadow-lg";
+        const inactiveStyle = "bg-transparent text-primary border-primary hover:bg-primary hover:text-white scale-100";
+
+        return `
+          <button onclick="switchHistoryTab('${item.id}')" 
+            class="flex-shrink-0 px-4 py-2 rounded-full font-bold transition-all transform border-2 snap-center whitespace-nowrap text-sm md:text-base ${isActive ? activeStyle : inactiveStyle}">
+            <i class="fas ${item.icon} mr-2"></i> ${item.tabTitle}
+          </button>
+        `;
+      }).join('');
+
+      // 2. RENDER CONTENT
+      const activeItem = historyData.find(i => i.id === activeHistoryId);
+      if (activeItem) {
+
+        const dateObj = new Date(activeItem.updatedAt);
+        const dateStr = dateObj.toLocaleString('en-GB', { day: 'numeric', month: 'short', year: 'numeric' });
+
+        // Admin Controls
+        const adminControls = state.user === 'admin' ? `
+          <div class="flex gap-2 ml-auto">
+            <button onclick="editHistory('${activeItem.id}')" class="bg-blue-100 hover:bg-blue-200 text-blue-700 px-3 py-1 rounded-full text-xs font-bold transition flex items-center gap-1">
+              <i class="fas fa-edit"></i> Edit
+            </button>
+            <button onclick="deleteHistory('${activeItem.id}')" class="bg-red-100 hover:bg-red-200 text-red-700 px-3 py-1 rounded-full text-xs font-bold transition flex items-center gap-1">
+              <i class="fas fa-trash"></i> Delete Tab
+            </button>
+          </div>
+        ` : '';
+
+        // Carousel Logic
+        let currentImgUrl = activeItem.images[currentImageIndex] || activeItem.images[0];
+        if (!currentImgUrl) currentImgUrl = activeItem.image;
+        if (currentImageIndex >= activeItem.images.length) currentImageIndex = 0;
+
+        const arrows = activeItem.images.length > 1 ? `
+            <button onclick="prevHistoryImage(event)" class="absolute left-2 top-1/2 -translate-y-1/2 bg-black/50 text-white w-8 h-8 rounded-full flex items-center justify-center hover:bg-black/80 transition z-30">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button onclick="nextHistoryImage(event)" class="absolute right-2 top-1/2 -translate-y-1/2 bg-black/50 text-white w-8 h-8 rounded-full flex items-center justify-center hover:bg-black/80 transition z-30">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+            <div class="absolute bottom-2 left-1/2 -translate-x-1/2 flex gap-1 z-30">
+                ${activeItem.images.map((_, idx) => `
+                    <div class="w-1.5 h-1.5 rounded-full shadow-sm ${idx === currentImageIndex ? 'bg-white scale-125' : 'bg-white/50'}"></div>
+                `).join('')}
+            </div>
+        ` : '';
+
+        const formattedText = activeItem.text.split('\n').map(para => para.trim() ? `<p class="mb-4">${para}</p>` : '').join('');
+
+        contentContainer.innerHTML = `
+          <div class="history-chapter animate-fade-in h-full flex flex-col md:flex-row gap-6 relative">
+            
+            <div class="w-full md:w-1/2 h-64 md:h-96 relative rounded-2xl overflow-hidden group select-none shadow-xl border border-white/10 flex-shrink-0">
+              <img src="${currentImgUrl}" class="w-full h-full object-cover transform transition duration-500" id="history-main-img">
+              <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent z-10 pointer-events-none"></div>
+              ${arrows}
+              <div class="absolute bottom-4 left-4 z-20 text-white pointer-events-none">
+                <span class="bg-secondary text-black text-[10px] font-bold px-2 py-0.5 rounded mb-1 inline-block uppercase tracking-widest">${activeItem.subtitle || 'History'}</span>
+                <h3 class="text-2xl font-bold drop-shadow-md leading-tight">${activeItem.title}</h3>
+              </div>
+            </div>
+
+            <div class="w-full md:w-1/2 flex flex-col h-full">
+              <div class="flex items-center justify-between bg-black/5 dark:bg-white/5 p-3 rounded-lg mb-4 border border-black/10 dark:border-white/10">
+                 <div class="flex flex-col">
+                    <span class="text-[10px] uppercase font-bold opacity-50 tracking-wider">Last Updated</span>
+                    <span class="text-xs font-bold opacity-90"><i class="far fa-clock mr-1"></i> ${dateStr}</span>
+                 </div>
+                 ${adminControls}
+              </div>
+              <div class="mb-2">
+                <i class="fas fa-quote-left text-4xl text-secondary/30"></i>
+              </div>
+              <div class="overflow-y-auto h-64 md:h-[300px] pr-4 scrollbar-thin text-justify leading-relaxed opacity-90 text-lg">
+                ${formattedText}
+              </div>
+            </div>
+          </div>
+        `;
+      }
+    }
+
+    // --- MISSING FUNCTIONS ADDED BELOW ---
+
+    // 1. OPEN MODAL
     function openHistoryModal(item = null) {
       const modal = document.getElementById('history-modal');
       modal.classList.remove('hide');
 
-      // Reset Views
-      document.getElementById('img-add-view').classList.remove('hide');
-      document.getElementById('img-list-view').classList.add('hide');
-
-      // Update Button Styles
-      document.getElementById('btn-view-add').classList.add('bg-primary/20', 'border-primary');
-      document.getElementById('btn-view-list').classList.remove('bg-gray-300', 'dark:bg-white/20');
-
       if (item) {
-        // EDIT MODE
         document.getElementById('history-modal-title').innerText = "Edit Story";
         document.getElementById('hist-id').value = item.id;
         document.getElementById('hist-tab-title').value = item.tabTitle;
         document.getElementById('hist-title').value = item.title;
         document.getElementById('hist-subtitle').value = item.subtitle;
         document.getElementById('hist-text').value = item.text;
-
-        // Populate Images
         currentStoryImages = [...item.images];
       } else {
-        // ADD MODE
         document.getElementById('history-modal-title').innerText = "Add New Story";
         document.getElementById('hist-id').value = "";
         document.querySelector('#history-modal form').reset();
         currentStoryImages = [];
       }
 
-      renderImageList();
+      // Default to "Add" view
+      toggleImageSection('add');
     }
 
-    // --- NEW FEATURE: 'DONE' BUTTON LOGIC ---
+    // 2. TOGGLE IMAGE SECTIONS (The missing function)
+    function toggleImageSection(mode) {
+      const addView = document.getElementById('img-add-view');
+      const listView = document.getElementById('img-list-view');
+      const btnList = document.getElementById('btn-view-list');
+      const btnAdd = document.getElementById('btn-view-add');
+
+      if (mode === 'list') {
+        addView.classList.add('hide');
+        listView.classList.remove('hide');
+        btnList.classList.add('bg-gray-300', 'dark:bg-white/20');
+        btnAdd.classList.remove('bg-primary/20', 'border-primary');
+        renderImageList();
+      } else {
+        listView.classList.add('hide');
+        addView.classList.remove('hide');
+        btnList.classList.remove('bg-gray-300', 'dark:bg-white/20');
+        btnAdd.classList.add('bg-primary/20', 'border-primary');
+      }
+    }
+
+    // 3. RENDER IMAGE LIST (The missing function)
+    function renderImageList() {
+      const container = document.getElementById('existing-images-grid');
+      container.innerHTML = '';
+
+      if (currentStoryImages.length === 0) {
+        container.innerHTML = '<p class="text-xs opacity-50 col-span-3 text-center py-4">No images yet.</p>';
+        return;
+      }
+
+      currentStoryImages.forEach((imgUrl, index) => {
+        const div = document.createElement('div');
+        div.className = 'relative group aspect-square rounded overflow-hidden border border-gray-300';
+        div.innerHTML = `
+          <img src="${imgUrl}" class="w-full h-full object-cover">
+          <button type="button" onclick="removeImageFromList(${index})" 
+            class="absolute top-1 right-1 bg-red-600 text-white w-6 h-6 rounded-full flex items-center justify-center text-xs opacity-0 group-hover:opacity-100 transition shadow-md">
+            <i class="fas fa-times"></i>
+          </button>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    // 4. DONE BUTTON LOGIC (Immediate Upload)
     function handleAddImageDone() {
       const urlInput = document.getElementById('hist-image-url');
       const url = urlInput.value.trim();
 
       if (url) {
-        // 1. Add to local list
         currentStoryImages.push(url);
-        urlInput.value = ""; // Clear input
+        urlInput.value = "";
 
-        // 2. Refresh List View
-        renderImageList();
-
-        // 3. Switch View to List
-        toggleImageSection('list');
-
-        // 4. IMPORTANT: If we are EDITING an existing story, update DB immediately
+        // Immediately save to DB if editing
         const id = document.getElementById('hist-id').value;
-        if (id) {
-          // Trigger a background save to update the DB
-          saveHistoryStory(new Event('submit'), true); // true = silent mode
-        }
+        if (id) saveHistoryStory(new Event('submit'), true);
+
+        // Switch to list to see result
+        toggleImageSection('list');
       } else {
-        // If empty, just switch view
         toggleImageSection('list');
       }
     }
 
-    // --- REMOVE IMAGE ---
+    // 5. REMOVE IMAGE
     function removeImageFromList(index) {
       if (confirm('Remove this image?')) {
         currentStoryImages.splice(index, 1);
-        renderImageList();
-
-        // Update DB immediately if editing
         const id = document.getElementById('hist-id').value;
         if (id) saveHistoryStory(new Event('submit'), true);
+        renderImageList();
       }
     }
-
-    // --- SAVE TO DATABASE ---
-    async function saveHistoryStory(e, silent = false) {
-      if (e) e.preventDefault();
-
-      const id = document.getElementById('hist-id').value;
-      const formData = new FormData();
-
-      formData.append('tabTitle', document.getElementById('hist-tab-title').value);
-      formData.append('title', document.getElementById('hist-title').value);
-      formData.append('subtitle', document.getElementById('hist-subtitle').value);
-      formData.append('text', document.getElementById('hist-text').value);
-
-      // SEND THE UPDATED ARRAY
-      formData.append('retainedImages', JSON.stringify(currentStoryImages));
-
-      // Send Files (if any in the input)
-      const fileInput = document.getElementById('hist-image-file');
-      if (fileInput.files.length > 0) {
-        for (let i = 0; i < fileInput.files.length; i++) {
-          formData.append('historyImages', fileInput.files[i]);
-        }
-      }
-
-      try {
-        let response;
-        if (id) {
-          response = await fetch(`${API_URL}/history/${id}`, { method: 'PUT', body: formData });
-        } else {
-          response = await fetch(`${API_URL}/history`, { method: 'POST', body: formData });
-        }
-
-        if (response.ok) {
-          // If it's a "silent" save (from Done button), just refresh data
-          // If it's a real save (Main Button), close modal
-          const savedData = await response.json();
-
-          // Update local state with new images (in case files were uploaded)
-          if (savedData.images) currentStoryImages = savedData.images;
-
-          if (!silent) {
-            alert("✅ Saved Successfully!");
-            closeHistoryModal();
-          }
-          fetchHistory();
-        } else {
-          if (!silent) alert("❌ Error saving story");
-        }
-      } catch (err) {
-        console.error(err);
-        if (!silent) alert("❌ Server Error");
-      }
-    }
-
     // --- 3. CAROUSEL CONTROLS ---
     function switchHistoryTab(id) {
       activeHistoryId = id;
