--- a/client/index.html
+++ b/client/index.html
@@ -845,7 +845,7 @@
       <div class="text-center mb-6">
         <div
           class="w-32 h-32 md:w-48 md:h-48 rounded-full border-4 border-primary mx-auto mb-4 overflow-hidden shadow-2xl relative">
-          <img id="overlay-art" src="/assets/static/music-disk.jpeg"
+          <img id="overlay-art" src="/assets/static/music-disk.jpg"
             class="w-full h-full object-cover animate-spin-slow">
           <div class="absolute inset-0 flex items-center justify-center bg-black/20">
             <i class="fas fa-music text-3xl text-white/80"></i>
