--- a/client/index.html
+++ b/client/index.html
@@ -845,7 +845,7 @@
       <div class="text-center mb-6">
         <div
           class="w-32 h-32 md:w-48 md:h-48 rounded-full border-4 border-primary mx-auto mb-4 overflow-hidden shadow-2xl relative">
-          <img id="overlay-art" src="/assets/static/music-disk.jpg"
+          <img id="overlay-art" src="/assets/static/0music-disk.png"
             class="w-full h-full object-cover animate-spin-slow">
           <div class="absolute inset-0 flex items-center justify-center bg-black/20">
             <i class="fas fa-music text-3xl text-white/80"></i>
@@ -896,7 +896,7 @@
         class="fas fa-compress-arrows-alt"></i></button>
     <div
       class="player-art-container relative w-8 h-8 rounded-full overflow-hidden bg-black flex-shrink-0 cursor-pointer">
-      <img src="public/assets/static/music-disk.jpeg" class="w-full h-full object-cover animate-spin-slow"
+      <img src="public/assets/static/0music-disk.png" class="w-full h-full object-cover animate-spin-slow"
         id="player-art">
     </div>
     <div class="player-info flex flex-col w-24 overflow-hidden cursor-pointer">
